Prepared PhysicalTopology for Processes. Cleaned PSClientPADRES.